test_regress/t/t_fourstate_casex_unsup.out
%Error-UNSUPPORTED: t/t_case_x.v:21:5: All case statements with four-state value as an expression are unsupported with --fourstate
                                     : ... note: In instance 't'
   21 |     case (value)
      |     ^~~~
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error-UNSUPPORTED: t/t_case_x.v:27:5: All case statements with four-state value as an expression are unsupported with --fourstate
                                     : ... note: In instance 't'
   27 |     case (valuex)
      |     ^~~~
%Error-UNSUPPORTED: t/t_case_x.v:35:5: All case statements with four-state value as an expression are unsupported with --fourstate
                                     : ... note: In instance 't'
   35 |     casex (value)
      |     ^~~~~
%Error-UNSUPPORTED: t/t_case_x.v:39:5: All case statements with four-state value as an expression are unsupported with --fourstate
                                     : ... note: In instance 't'
   39 |     casex (value)
      |     ^~~~~
%Error-UNSUPPORTED: t/t_case_x.v:43:5: All case statements with four-state value as an expression are unsupported with --fourstate
                                     : ... note: In instance 't'
   43 |     casex (valuex)
      |     ^~~~~
%Error-UNSUPPORTED: t/t_case_x.v:47:5: All case statements with four-state value as an expression are unsupported with --fourstate
                                     : ... note: In instance 't'
   47 |     casex (valuex)
      |     ^~~~~
%Error-UNSUPPORTED: t/t_case_x.v:52:5: All case statements with four-state value as an expression are unsupported with --fourstate
                                     : ... note: In instance 't'
   52 |     casez (value)
      |     ^~~~~
%Error-UNSUPPORTED: t/t_case_x.v:57:5: All case statements with four-state value as an expression are unsupported with --fourstate
                                     : ... note: In instance 't'
   57 |     casez (valuex)
      |     ^~~~~
%Error: Exiting due to
